[project]
name = "sysconfigpatcher"
version = "0.1.0"
description = "Patch sysconfigdata and pkgconfig files in a python installation from indygreg's python builds."
authors = [
    { name = "Ulrik Sverdrup", email = "ulrik.sverdrup@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
"sysconfigpatcher" = "sysconfigpatcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff~=0.3.5",
    "pytest~=8.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sysconfigpatcher.py"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
